fix: update sidebar background image path for dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@
 }
 
 .bg-sidebar {
-    @apply dark:bg-[url(/public/noise-light.png)];
+    @apply dark:bg-[url(/noise-light.png)];
 }
 
 .markdown h1 {
